--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,7 @@
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="@color/cardview_dark_background"
+        android:background="@color/gray_color"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/login_id_et"
         app:layout_constraintStart_toStartOf="@+id/login_id_et"
@@ -83,7 +83,7 @@
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="@color/cardview_dark_background"
+        android:background="@color/gray_color"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/login_email_et"
         app:layout_constraintStart_toStartOf="@+id/login_email_et"
@@ -116,7 +116,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/cardview_dark_background"
+        android:background="@color/gray_color"
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
