--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -18,24 +19,39 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
+        android:id="@+id/signup_name_et"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:background="@null"
+        android:hint="이름"
+        android:inputType="text"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signup_sign_up_tv"/>
+
+    <EditText
         android:id="@+id/signup_id_et"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="5dp"
         android:background="@null"
         android:hint="아이디(이메일)"
         android:inputType="text"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup_sign_up_tv"
+        app:layout_constraintTop_toBottomOf="@+id/signup_name_et"
         app:layout_constraintEnd_toStartOf="@+id/signup_middle_tv"/>
 
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="@color/cardview_dark_background"
+        android:background="@color/gray_color"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/signup_id_et"
         app:layout_constraintStart_toStartOf="@+id/signup_id_et"
