--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,6 +47,20 @@
         app:layout_constraintEnd_toEndOf="@+id/login_id_et"/>
 
     <TextView
+        android:id="@+id/login_email_error_tv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="에러 발생"
+        android:textColor="#CC3D3D"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/login_id_et"
+        app:layout_constraintStart_toStartOf="@+id/login_id_et"
+        app:layout_constraintEnd_toEndOf="@+id/login_email_et" />
+
+    <TextView
         android:id="@+id/login_middle_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -97,7 +111,7 @@
         android:layout_marginTop="55dp"
         android:background="@null"
         android:hint="비밀번호"
-        android:inputType="text"
+        android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_id_et"
         app:layout_constraintEnd_toStartOf="@+id/login_password_show_iv"/>
