--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -27,18 +27,27 @@
         android:layout_marginEnd="20dp"
         android:background="@null"
         android:hint="이름"
-        android:inputType="text"
+        android:inputType="textPersonName"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_sign_up_tv"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/gray_color"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/signup_name_et"
+        app:layout_constraintStart_toStartOf="@+id/signup_name_et"
+        app:layout_constraintEnd_toEndOf="@+id/signup_name_et"/>
 
     <EditText
         android:id="@+id/signup_id_et"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="55dp"
         android:layout_marginEnd="5dp"
         android:background="@null"
         android:hint="아이디(이메일)"
@@ -56,6 +65,20 @@
         app:layout_constraintTop_toBottomOf="@+id/signup_id_et"
         app:layout_constraintStart_toStartOf="@+id/signup_id_et"
         app:layout_constraintEnd_toEndOf="@+id/signup_id_et"/>
+
+    <TextView
+        android:id="@+id/signup_email_error_tv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="에러 발생"
+        android:textColor="#CC3D3D"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/signup_id_et"
+        app:layout_constraintStart_toStartOf="@+id/signup_id_et"
+        app:layout_constraintEnd_toEndOf="@+id/signup_email_et" />
 
     <TextView
         android:id="@+id/signup_middle_tv"
@@ -81,6 +104,15 @@
         app:layout_constraintStart_toEndOf="@+id/signup_middle_tv"
         app:layout_constraintEnd_toStartOf="@id/signup_email_select_iv"/>
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/gray_color"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/signup_email_et"
+        app:layout_constraintStart_toStartOf="@+id/signup_email_et"
+        app:layout_constraintEnd_toEndOf="@+id/signup_email_et"/>
+
     <ImageView
         android:id="@+id/signup_email_select_iv"
         android:layout_width="20dp"
@@ -100,10 +132,19 @@
         android:layout_marginTop="55dp"
         android:background="@null"
         android:hint="비밀번호"
-        android:inputType="text"
+        android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_id_et"
         app:layout_constraintEnd_toStartOf="@+id/signup_password_show_iv"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/gray_color"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/signup_password_et"
+        app:layout_constraintStart_toStartOf="@+id/signup_password_et"
+        app:layout_constraintEnd_toEndOf="@+id/signup_password_et"/>
 
     <ImageView
         android:id="@+id/signup_password_show_iv"
@@ -121,13 +162,22 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="55dp"
         android:background="@null"
         android:hint="비밀번호 확인"
-        android:inputType="text"
+        android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_password_show_iv"
         app:layout_constraintEnd_toStartOf="@+id/signup_password_show_iv"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/gray_color"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/signup_password_check_et"
+        app:layout_constraintStart_toStartOf="@+id/signup_password_check_et"
+        app:layout_constraintEnd_toEndOf="@+id/signup_password_check_et"/>
 
     <ImageView
         android:id="@+id/signup_password_check_show_iv"
@@ -141,7 +191,7 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-        android:id="@+id/sighup_success_tv"
+        android:id="@+id/signup_success_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="가입완료"
