--- a/app/src/main/res/layout/fragment_look.xml
+++ b/app/src/main/res/layout/fragment_look.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -131,7 +131,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/look_chart_total_cl"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="380dp"
             android:elevation="5dp"
             android:layout_marginTop="20dp"
             android:layout_marginHorizontal="20dp"
@@ -194,281 +194,32 @@
                 app:layout_constraintBottom_toBottomOf="@+id/look_chart_listen_all_tv"
                 app:layout_constraintEnd_toStartOf="@+id/look_chart_listen_all_tv"/>
 
-            <LinearLayout
-                android:id="@+id/look_chart_layout"
-                android:layout_width="match_parent"
+            <ProgressBar
+                android:id="@+id/look_loading_pb"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:max="100"
+                android:indeterminateTint="@color/gray_color"
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/look_chart_sub_title_tv">
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/look_chart_1st_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/look_chart_sub_title_tv">
 
-                    <ImageView
-                        android:id="@+id/look_chart_1st_album"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginStart="15dp"
-                        android:src="@drawable/img_album_exp2"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/look_chart_1st_order"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:text="1"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/look_chart_1st_album"
-                        app:layout_constraintStart_toEndOf="@+id/look_chart_1st_album"
-                        app:layout_constraintTop_toTopOf="@+id/look_chart_1st_album" />
-
-                    <TextView
-                        android:id="@+id/look_chart_1st_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:text="Stay (Explicit Ver.)"
-                        android:textSize="15sp"
-                        android:textColor="@color/black"
-                        app:layout_constraintStart_toEndOf="@+id/look_chart_1st_order"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/look_chart_1st_singer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="The Kid LAROI &amp; Justin Bieber"
-                        app:layout_constraintStart_toStartOf="@+id/look_chart_1st_title"
-                        app:layout_constraintTop_toBottomOf="@+id/look_chart_1st_title" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/look_chart_2st_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    android:layout_marginTop="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/look_chart_1st_layout">
-
-                    <ImageView
-                        android:id="@+id/look_chart_2st_album"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginStart="15dp"
-                        android:src="@drawable/img_album_exp2"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/look_chart_2st_order"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:text="2"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/look_chart_2st_album"
-                        app:layout_constraintStart_toEndOf="@+id/look_chart_2st_album"
-                        app:layout_constraintTop_toTopOf="@+id/look_chart_2st_album" />
-
-                    <TextView
-                        android:id="@+id/look_chart_2st_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:text="신호등"
-                        android:textSize="15sp"
-                        android:textColor="@color/black"
-                        app:layout_constraintStart_toEndOf="@+id/look_chart_2st_order"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/look_chart_2st_singer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="이무진"
-                        app:layout_constraintStart_toStartOf="@+id/look_chart_2st_title"
-                        app:layout_constraintTop_toBottomOf="@+id/look_chart_2st_title" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/look_chart_3st_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    android:layout_marginTop="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/look_chart_2st_layout">
-
-                    <ImageView
-                        android:id="@+id/look_chart_3st_album"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginStart="15dp"
-                        android:src="@drawable/img_album_exp2"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/look_chart_3st_order"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:text="3"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/look_chart_3st_album"
-                        app:layout_constraintStart_toEndOf="@+id/look_chart_3st_album"
-                        app:layout_constraintTop_toTopOf="@+id/look_chart_3st_album" />
-
-                    <TextView
-                        android:id="@+id/look_chart_3st_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:text="바라만 본다"
-                        android:textSize="15sp"
-                        android:textColor="@color/black"
-                        app:layout_constraintStart_toEndOf="@+id/look_chart_3st_order"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/look_chart_3st_singer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="MSG워너비 (M.O.M)"
-                        app:layout_constraintStart_toStartOf="@+id/look_chart_3st_title"
-                        app:layout_constraintTop_toBottomOf="@+id/look_chart_3st_title" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/look_chart_4st_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    android:layout_marginTop="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/look_chart_3st_layout">
-
-                    <ImageView
-                        android:id="@+id/look_chart_4st_album"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginStart="15dp"
-                        android:src="@drawable/img_album_exp3"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/look_chart_4st_order"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:text="4"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/look_chart_4st_album"
-                        app:layout_constraintStart_toEndOf="@+id/look_chart_4st_album"
-                        app:layout_constraintTop_toTopOf="@+id/look_chart_4st_album" />
-
-                    <TextView
-                        android:id="@+id/look_chart_4st_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:text="Next Level"
-                        android:textSize="15sp"
-                        android:textColor="@color/black"
-                        app:layout_constraintStart_toEndOf="@+id/look_chart_4st_order"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/look_chart_4st_singer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="easpa"
-                        app:layout_constraintStart_toStartOf="@+id/look_chart_4st_title"
-                        app:layout_constraintTop_toBottomOf="@+id/look_chart_4st_title" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/look_chart_5st_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    android:layout_marginTop="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/look_chart_4st_layout">
-
-                    <ImageView
-                        android:id="@+id/look_chart_5st_album"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginStart="15dp"
-                        android:src="@drawable/img_album_exp2"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/look_chart_5st_order"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:text="5"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@+id/look_chart_5st_album"
-                        app:layout_constraintStart_toEndOf="@+id/look_chart_5st_album"
-                        app:layout_constraintTop_toTopOf="@+id/look_chart_5st_album" />
-
-                    <TextView
-                        android:id="@+id/look_chart_5st_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="15dp"
-                        android:text="Permission to Dance"
-                        android:textSize="15sp"
-                        android:textColor="@color/black"
-                        app:layout_constraintStart_toEndOf="@+id/look_chart_5st_order"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/look_chart_5st_singer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="방탄소년단"
-                        app:layout_constraintStart_toStartOf="@+id/look_chart_5st_title"
-                        app:layout_constraintTop_toBottomOf="@+id/look_chart_5st_title" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/look_flo_chart_rv"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                tools:listitem="@layout/item_look_chart"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/look_chart_sub_title_tv"
+                app:layout_constraintBottom_toBottomOf="@+id/look_chart_total_cl"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
