--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -142,6 +142,7 @@
         </androidx.viewpager2.widget.ViewPager2>
 
         <TextView
+            android:id="@+id/home_audio_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="오디오로 에너지 충전"
