--- a/app/src/main/res/layout/fragment_look.xml
+++ b/app/src/main/res/layout/fragment_look.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/look_top_cl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/look_tv"
@@ -51,7 +55,7 @@
                     android:id="@+id/look_chip_title_02_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="영상"
+                    android:text="장르·테마"
                     android:textColor="#7D7D7D"
                     android:paddingVertical="8dp"
                     android:paddingHorizontal="15dp"
@@ -62,7 +66,7 @@
                     android:id="@+id/look_chip_title_03_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="장르"
+                    android:text="오디오"
                     android:textColor="#7D7D7D"
                     android:paddingVertical="8dp"
                     android:paddingHorizontal="15dp"
@@ -73,7 +77,7 @@
                     android:id="@+id/look_chip_title_04_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="상황"
+                    android:text="영상"
                     android:textColor="#7D7D7D"
                     android:paddingVertical="8dp"
                     android:paddingHorizontal="15dp"
@@ -84,26 +88,26 @@
                     android:id="@+id/look_chip_title_05_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="분위기"
+                    android:text="크리에이터"
                     android:textColor="#7D7D7D"
                     android:paddingVertical="8dp"
                     android:paddingHorizontal="15dp"
                     android:layout_marginEnd="15dp"
                     android:background="@drawable/fragment_look_chip_off_background"/>
 
-                <TextView
-                    android:id="@+id/look_chip_title_06_tv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="오디오"
-                    android:textColor="#7D7D7D"
-                    android:paddingVertical="8dp"
-                    android:paddingHorizontal="15dp"
-                    android:layout_marginEnd="15dp"
-                    android:background="@drawable/fragment_look_chip_off_background"/>
             </LinearLayout>
 
         </HorizontalScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ScrollView
+        android:id="@+id/look_sv"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/look_top_cl"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/look_sub_title_chart_tv"
@@ -116,7 +120,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginStart="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/look_chip_scroll_hs" />
+            app:layout_constraintTop_toBottomOf="@+id/look_top_cl" />
 
         <ImageView
             android:id="@+id/look_sub_title_arrow_iv"
@@ -224,6 +228,101 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
+            android:id="@+id/look_sub_title_genre_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="장르"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_marginTop="30dp"
+            app:layout_constraintStart_toStartOf="@+id/look_sub_title_chart_tv"
+            app:layout_constraintTop_toBottomOf="@id/look_chart_total_cl"/>
+
+        <GridLayout
+            android:id="@+id/look_genre_gl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:columnCount="2"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/look_sub_title_genre_tv">
+
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/look_genre_domestic_ballade"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/img_genre_exp_1"
+                android:layout_gravity="start"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/loog_genre_pop"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/img_genre_exp_2"
+                android:layout_gravity="end"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/look_genre_domestic_dance"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/img_genre_exp_3"
+                android:layout_gravity="start"
+                android:layout_marginTop="10dp"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/loog_genre_rnb"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/img_genre_exp_4"
+                android:layout_gravity="end"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/look_genre_domestic_hiphop"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/img_genre_exp_5"
+                android:layout_gravity="start"
+                android:layout_marginTop="10dp"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/loog_genre_trot"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/img_genre_exp_6"
+                android:layout_gravity="end"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/look_genre_rnb"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/img_genre_exp_7"
+                android:layout_gravity="start"
+                android:layout_marginTop="10dp"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/loog_genre_hiphop"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/img_genre_exp_8"
+                android:layout_gravity="end"/>
+
+        </GridLayout>
+
+        <TextView
             android:id="@+id/look_sub_title_video_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -232,8 +331,8 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:layout_marginTop="30dp"
-            app:layout_constraintStart_toStartOf="@id/look_chart_total_cl"
-            app:layout_constraintTop_toBottomOf="@+id/look_chart_total_cl" />
+            app:layout_constraintStart_toStartOf="@id/look_sub_title_chart_tv"
+            app:layout_constraintTop_toBottomOf="@+id/look_genre_gl" />
 
         <ImageView
             android:id="@+id/look_sub_title_video_arrow_iv"
@@ -257,6 +356,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/look_sub_title_video_tv"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
