--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -18,4 +18,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
+    <EditText
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+
 </androidx.constraintlayout.widget.ConstraintLayout>
