--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,7 +19,21 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
+        android:id="@+id/search_searchbar_et"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/seach_edit_text_background"
+        android:drawableStart="@drawable/ic_search"
+        android:paddingStart="5dp"
+        android:drawablePadding="10dp"
+        android:hint="검색어를 입력하세요"
+        android:inputType="text"
+        android:textSize="20sp"
+        android:paddingVertical="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/search_tv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
